# basic-gpt

./: Dockerfile  README.md  extract_sentiment.py  kmmlu_test.py  load.py  oovcount.py  predict.py  prompts.txt  prompts_full.txt  pyproject.toml  test.py  tokenization.py  train.py  validate.py  validation.py
data/korean_textbook_hf/: load.py
data/korean_webtext_hf/: load.py
data/kr3_hf/: load.py
data/namuwiki_hf/: load.py
data/wikipedia_ko_hf/: load.py
model/: FFNN.py  decoder_transformer.py
preprocess/: manual_bbpe.py  manual_bpe.py  tokenizer_bbpe.py
preprocess/kogpt2-base-v2/: README.md  config.json
util/: data_utils.py  file_utils.py
