[project]
name = "basic-gpt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
